changing to virtual threads scenario 1 and 2